[gd_scene load_steps=5 format=3 uid="uid://bgdqwdnl8yfdr"]

[ext_resource type="Texture2D" uid="uid://cta4efyfit21o" path="res://assets/sprites/blackholes/blackhole.png" id="1_hq4hi"]
[ext_resource type="Script" path="res://scripts/gameobjects/systems/objects/black_hole.gd" id="1_j18jm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cvye3"]
radius = 400.0

[sub_resource type="CircleShape2D" id="CircleShape2D_j4ith"]
radius = 31.0644

[node name="BlackHole" type="Node2D"]
script = ExtResource("1_j18jm")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_hq4hi")

[node name="GravityArea2D" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 262

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityArea2D"]
shape = SubResource("CircleShape2D_cvye3")
debug_color = Color(0.432747, 0.012143, 0, 0.42)

[node name="ConsumeArea2D" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 262

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConsumeArea2D"]
shape = SubResource("CircleShape2D_j4ith")

[connection signal="area_entered" from="GravityArea2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="ConsumeArea2D" to="." method="_on_consume_area_2d_area_entered"]
